config/policy/workloadclass_vap_binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: workload-class-guardrail-parameterized-binding
spec:
  policyName: workload-class-guardrail-parameterized
  validationActions: [Deny]
  paramRef:
    name: standard-guardrail
  matchResources:
    namespaceSelector: {} # Apply cluster-wide
